welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if(message = "A"){
               ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
    else if(message ="B"){
                    ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
    	else if(message ="C"){
                        ^BDRBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
    		else if(message= "X"){
                               ^BDRBuggle:22: error: type mismatch;
 found   : Unit
 required: Boolean
    			else if(message= "Y"){
                                       ^BDRBuggle:26: error: not found: value message
  }					else if(message= "Z"){
                                                ^